--- a/views/producto/index.twig
+++ b/views/producto/index.twig
@@ -69,6 +69,11 @@
 									<option value=""></option>
 								</select>
 							</div>
+
+							<label for="inputName" class="col-md-2 form-label">Correo electrónico</label>
+							<div class="col-md-4">
+								<input type="text" class="form-control" name="correo" id="correo" value="{{ filtros.correo }}"/>
+							</div>
 						</div>
 
 						<div class="mb-0 mt-4 ">
@@ -141,6 +146,7 @@
                 .end()
                 .append('<option value=""></option>')
                 .val('');
+            $("#correo").val('');
 			cargar(1);
 		}
 
