--- a/views/producto/lista.twig
+++ b/views/producto/lista.twig
@@ -15,7 +15,7 @@
 			<th style="width: 90px;"></th>
 			<th>Institución</th>
 			<th>Cliente</th>
-			<th>Producto</th>
+			<th>Código operación</th>
 			<th>Estado</th>
 			<th>Asignado</th>
 			<th>Último seguimiento</th>
