--- a/views/home/alertas.twig
+++ b/views/home/alertas.twig
@@ -1,4 +1,4 @@
-{% set alertaDiario = alertasTop.consultar() %}
+{% set alertaDiario = alertasTop.consultarRecienteSeguimiento() %}
 <div class="dropdown  d-flex notifications">
 	{% if alertaDiario.data|length >= 0 and alertaDiario.data|length <= 55 %}
 		<a class="nav-link icon" data-bs-toggle="dropdown" style="color: red;">
@@ -51,5 +51,61 @@
 {#		<div class="dropdown-divider m-0"></div>#}
 {#		<a href="notify-list.php" class="dropdown-item text-center p-3 text-muted">#}
 {#			View all Notification</a>#}
+	</div>
+</div>
+
+{% set alertaDiarioCliente = alertasTop.consultarRecienteCliente() %}
+<div class="dropdown  d-flex notifications">
+	{% if alertaDiarioCliente.data|length >= 0 and alertaDiarioCliente.data|length <= 30 %}
+		<a class="nav-link icon" data-bs-toggle="dropdown" style="color: red;">
+			<i class="fe fe-users"></i><span class="badge bg-secondary header-badge" style="background: red !important;">{{ alertaDiarioCliente.data|length }}</span>
+		</a>
+	{% elseif alertaDiarioCliente.data|length >= 31 and alertaDiarioCliente.data|length <= 50 %}
+		<a class="nav-link icon" data-bs-toggle="dropdown" style="color: yellow;">
+			<i class="fe fe-users"></i><span class="badge bg-secondary header-badge" style="background: yellow !important;">{{ alertaDiarioCliente.data|length }}</span>
+		</a>
+	{% elseif alertaDiarioCliente.data|length >= 51 and alertaDiarioCliente.data|length <= 80 %}
+		<a class="nav-link icon" data-bs-toggle="dropdown" style="color: orange;">
+			<i class="fe fe-users"></i><span class="badge bg-secondary header-badge" style="background: orange !important;">{{ alertaDiarioCliente.data|length }}</span>
+		</a>
+	{% else %}
+		<a class="nav-link icon" data-bs-toggle="dropdown" style="color: green;">
+			<i class="fe fe-users"></i><span class="badge bg-secondary header-badge" style="background: green !important;">{{ alertaDiarioCliente.data|length }}</span>
+		</a>
+	{% endif %}
+	<div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
+		<div class="drop-heading border-bottom">
+			<div class="d-flex">
+				<h6 class="mt-1 mb-0 fs-16 fw-semibold text-dark">Últimos Clientes de HOY</h6>
+			</div>
+		</div>
+		<div class="notifications-menu">
+			{% for a in alertaDiarioCliente.resumen %}
+				{% if a.institucion_id == 1 %}
+					<a class="dropdown-item d-flex" href="{{ root }}/producto/verSeguimientosDiners?id={{ a.producto_id }}">
+						<div class="me-3 notifyimg  bg-secondary brround box-shadow-secondary">
+							<i class="fe fe-check-circle"></i>
+						</div>
+						<div class="mt-1 wd-80p">
+							<h6 class="notification-label mb-1">{{ a.cliente_nombre }}</h6>
+							<span class="notification-subtext">hace&nbsp;{{ a.tiempo }}</span>
+						</div>
+					</a>
+				{% else %}
+					<a class="dropdown-item d-flex" href="{{ root }}/producto/verSeguimientos?id={{ a.producto_id }}">
+						<div class="me-3 notifyimg  bg-secondary brround box-shadow-secondary">
+							<i class="fe fe-check-circle"></i>
+						</div>
+						<div class="mt-1 wd-80p">
+							<h6 class="notification-label mb-1">{{ a.cliente_nombre }}</h6>
+							<span class="notification-subtext">hace&nbsp;{{ a.tiempo }}</span>
+						</div>
+					</a>
+				{% endif %}
+			{% endfor %}
+		</div>
+		{#		<div class="dropdown-divider m-0"></div>#}
+		{#		<a href="notify-list.php" class="dropdown-item text-center p-3 text-muted">#}
+		{#			View all Notification</a>#}
 	</div>
 </div>
