--- a/views/cargarArchivo/aplicativoDiners.twig
+++ b/views/cargarArchivo/aplicativoDiners.twig
@@ -8,6 +8,11 @@
 						<h4 class="card-title">Ingresar archivo</h4>
 					</div>
 					<div class="card-body">
+						<p style="text-align: justify;">
+							Permite la carga del archivo con los datos completos de los clientes para realizar el seguimiento respectivo,
+							los datos cargados serán asignados al estado "ASIGNADO_MEGACOB" y los clientes que no se encuentren en este listado serán
+							desactivados.
+						</p>
 						<fieldset id="campos">
 							<div class=" row mb-4">
 								<label for="inputName" class="col-md-2 form-label">Archivo *</label>
