--- a/views/cargarArchivo/asignacionesGestorDiners.twig
+++ b/views/cargarArchivo/asignacionesGestorDiners.twig
@@ -8,6 +8,9 @@
 						<h4 class="card-title">Ingresar archivo</h4>
 					</div>
 					<div class="card-body">
+						<p style="text-align: justify;">
+							Permite la carga del archivo con la asignación diaria a los gestores para que realicen sus respectivas operaciones.
+						</p>
 						<fieldset id="campos">
 							<div class=" row mb-4">
 								<label for="inputName" class="col-md-2 form-label">Archivo *</label>
