--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -423,6 +423,12 @@
 																v-html="aplicativo_diners_tarjeta_diners.score"></span>
 													</td>
 												</tr>
+												<tr>
+													<td><strong>SALDO TOTAL</strong></td>
+													<td style="text-align: center;">
+														<span v-html="aplicativo_diners_tarjeta_diners.saldo_total"></span>
+													</td>
+												</tr>
 												</tbody>
 											</table>
 											<br/>
@@ -923,6 +929,12 @@
 																v-html="aplicativo_diners_tarjeta_interdin.score"></span>
 													</td>
 												</tr>
+												<tr>
+													<td><strong>SALDO TOTAL</strong></td>
+													<td style="text-align: center;">
+														<span v-html="aplicativo_diners_tarjeta_interdin.saldo_total"></span>
+													</td>
+												</tr>
 												</tbody>
 											</table>
 											<br/>
@@ -1413,6 +1425,12 @@
 																v-html="aplicativo_diners_tarjeta_discover.score"></span>
 													</td>
 												</tr>
+												<tr>
+													<td><strong>SALDO TOTAL</strong></td>
+													<td style="text-align: center;">
+														<span v-html="aplicativo_diners_tarjeta_discover.saldo_total"></span>
+													</td>
+												</tr>
 												</tbody>
 											</table>
 											<br/>
@@ -1901,6 +1919,12 @@
 													<td><strong>SCORE</strong></td>
 													<td style="text-align: center;"><span
 																v-html="aplicativo_diners_tarjeta_mastercard.score"></span>
+													</td>
+												</tr>
+												<tr>
+													<td><strong>SALDO TOTAL</strong></td>
+													<td style="text-align: center;">
+														<span v-html="aplicativo_diners_tarjeta_mastercard.saldo_total"></span>
 													</td>
 												</tr>
 												</tbody>
