--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -2092,8 +2092,7 @@
 													</td>
 												</tr>
 												<tr>
-													<td style="text-decoration: underline;"><strong>DEUDA
-															ACTUAL</strong>
+													<td style="text-decoration: underline;"><strong>DEUDA ACTUAL</strong>
 													</td>
 													<td>
 														<span v-html="aplicativo_diners_tarjeta_mastercard.deuda_actual"></span>
