--- a/views/home.twig
+++ b/views/home.twig
@@ -2,7 +2,7 @@
 {% block content %}	
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xl-12">
 		<div class="row">
-			<div class="col-lg-6 col-md-6 col-sm-12 col-xl-6 col-xxl-3">
+			<div class="col-lg-4 col-md-4 col-sm-12 col-xl-4 col-xxl-4">
 				<div class="card overflow-hidden">
 					<div class="card-body">
 						<div class="d-flex">
@@ -21,74 +21,57 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-6 col-md-6 col-sm-12 col-xl-6 col-xxl-3">
+			<div class="col-lg-8 col-md-8 col-sm-12 col-xl-8 col-xxl-8">
 				<div class="card overflow-hidden">
 					<div class="card-body">
 						<div class="d-flex">
 							<div class="mt-2">
 								<table id="data-table" class="table table-bordered table-sm mb-0">
+									<thead class="table-primary">
 									<tr>
-										<th style="text-align: center;">TOTAL GESTIONES</th>
-										<th style="text-align: center;">TOTAL CLIENTES</th>
+										<th>USUARIO</th>
+										<th>GESTIONES</th>
+										<th>CLIENTES</th>
+										<th>CONTACTADAS</th>
+										<th>NO CONTACTADAS</th>
+										<th>COMPROMISOS</th>
+									</tr>
+									</thead>
+									<tbody>
+									<tr>
+										<td>
+											<span class="badge bg-success-transparent rounded-pill text-success p-2 px-3">ADMIN</span>
+										</td>
+										<td style="text-align: center;">{{ total_gestiones }}</td>
+										<td style="text-align: center;">{{ total_clientes }}</td>
+										<td style="text-align: center;">{{ total_gestiones_contactadas }}</td>
+										<td style="text-align: center;">{{ total_gestiones_no_contactadas }}</td>
+										<td style="text-align: center;">{{ total_gestiones_compromiso }}</td>
 									</tr>
 									<tr>
-										<td style="text-align: center;"><h3 class="mb-0 number-font"><i class="fa fa-cogs" aria-hidden="true"></i>&nbsp;{{ total_gestiones }}</h3></td>
-										<td style="text-align: center;"><h3 class="mb-0 number-font"><i class="fa fa-users" aria-hidden="true"></i>&nbsp;{{ total_clientes }}</h3></td>
+										<td>
+											<span class="badge bg-danger-transparent rounded-pill text-danger p-2 px-3">A.ABRIL</span>
+										</td>
+										<td style="text-align: center;">{{ total_gestiones }}</td>
+										<td style="text-align: center;">{{ total_clientes }}</td>
+										<td style="text-align: center;">{{ total_gestiones_contactadas }}</td>
+										<td style="text-align: center;">{{ total_gestiones_no_contactadas }}</td>
+										<td style="text-align: center;">{{ total_gestiones_compromiso }}</td>
 									</tr>
 									<tr>
-										<th style="text-align: center;">TOTAL GESTIONES CONTACTADAS</th>
-										<th style="text-align: center;">TOTAL GESTIONES NO CONTACTADAS</th>
+										<td>
+											<span class="badge bg-warning-transparent rounded-pill text-warning p-2 px-3">A.FLORES</span>
+										</td>
+										<td style="text-align: center;">{{ total_gestiones }}</td>
+										<td style="text-align: center;">{{ total_clientes }}</td>
+										<td style="text-align: center;">{{ total_gestiones_contactadas }}</td>
+										<td style="text-align: center;">{{ total_gestiones_no_contactadas }}</td>
+										<td style="text-align: center;">{{ total_gestiones_compromiso }}</td>
 									</tr>
-									<tr>
-										<td style="text-align: center;"><h3 class="mb-0 number-font"><i class="fa fa-check" aria-hidden="true"></i>&nbsp;{{ total_gestiones_contactadas }}</h3></td>
-										<td style="text-align: center;"><h3 class="mb-0 number-font"><i class="fa fa-exclamation" aria-hidden="true"></i>&nbsp;{{ total_gestiones_no_contactadas }}</h3></td>
-									</tr>
-									<tr>
-										<th colspan="2" style="text-align: center;">TOTAL GESTIONES COMPROMISOS</th>
-									</tr>
-									<tr>
-										<td colspan="2" style="text-align: center;"><h3 class="mb-0 number-font"><i class="fa fa-money" aria-hidden="true"></i>&nbsp;{{ total_gestiones_compromiso }}</h3></td>
-									</tr>
+									</tbody>
 								</table>
 							</div>
-							<div class="ms-auto" style="font-size: 80px; color: #46B476;">
-								<i class="fa fa-cogs"></i>
-							</div>
 						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-6 col-md-6 col-sm-12 col-xl-6 col-xxl-3">
-				<div class="card overflow-hidden">
-					<div class="card-body">
-						<div class="d-flex">
-							<div class="mt-2">
-								<h6 class="">Total Expenses</h6>
-								<h2 class="mb-0 number-font">$76,965</h2>
-							</div>
-							<div class="ms-auto">
-								<div class="chart-wrapper mt-1"> <canvas id="profitchart" class="h-8 w-9 chart-dropshadow"></canvas>
-								</div>
-							</div>
-						</div>
-						<span class="text-muted fs-12"><span class="text-green"><i class="fe fe-arrow-up-circle text-green"></i> 0.9%</span> Last 9 days</span>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-6 col-md-6 col-sm-12 col-xl-6 col-xxl-3">
-				<div class="card overflow-hidden">
-					<div class="card-body">
-						<div class="d-flex">
-							<div class="mt-2">
-								<h6 class="">Total Cost</h6>
-								<h2 class="mb-0 number-font">$59,765</h2>
-							</div>
-							<div class="ms-auto">
-								<div class="chart-wrapper mt-1"> <canvas id="costchart" class="h-8 w-9 chart-dropshadow"></canvas>
-								</div>
-							</div>
-						</div>
-						<span class="text-muted fs-12"><span class="text-warning"><i class="fe fe-arrow-up-circle text-warning"></i> 0.6%</span> Last year</span>
 					</div>
 				</div>
 			</div>
